# circles-server

./: .gitignore  .travis.yml  Cargo.toml  README.md  deploy.sh
clientcirclesapi/: README.md  pom.xml
clientcirclesapi/src/main/java/proto/: CirclesApi.java  ServiceGenerator.java
clientcirclesapi/src/main/java/proto/data/: EmptyJson.java  EmptyResponse.java
clientcirclesapi/src/main/java/proto/data/error/: ApiError.java  ApiErrorException.java
clientcirclesapi/src/main/java/proto/data/positions/: DateTimeSerializer.java  PositionUpdate.java
clientcirclesapi/src/test/java/proto/: CirclesApiTest.java  ServiceGeneratorTest.java
clientcirclesapi/src/test/java/proto/data/: ApiErrorTest.java
clientcirclesapi/src/test/java/proto/data/positions/: DateTimeSerializerTest.java
deployment/graylog/: deploy.sh
deployment/traefik/: rules.toml  start.sh  stop.sh  traefik.toml
examples/: firebase_token.txt  post_request.sh
examples/proto/: post-positions-mandatory.json
examples/wrk/: post-empty.lua
graylog/config/: docker-compose.yml
lib/circles-common/: Cargo.toml
lib/circles-common/src/: lib.rs
lib/circles-common/src/db/: error.rs  mod.rs  models.rs  pool.rs  query.rs  schema.rs
lib/circles-common/src/firebase/: error.rs  jwt.rs  keyring.rs  mod.rs
lib/circles-common/src/http/: auth.rs  error.rs  error_response.rs  header.rs  mod.rs  response.rs  router.rs
lib/circles-common/src/http/service/: auth.rs  mod.rs  router.rs
lib/circles-common/src/proto/: positions.rs
lib/circles-router/: Cargo.toml
lib/circles-router/src/: error.rs  lib.rs  router.rs
lib/hyper-common/: Cargo.toml
lib/hyper-common/src/: error_response.rs  header.rs  lib.rs
migrations/2017-09-22-044641_circles_layout/: down.sql  up.sql
services/dispatcher/: Cargo.toml  README.md
services/dispatcher/src/: dispatcher.rs  main.rs
services/dispatcher/src/auth/: authenticator.rs  error.rs  firebase_jwt.rs  firebase_keyring.rs  middleware.rs  mod.rs
services/dispatcher/src/firebase/: error.rs  jwt.rs  keyring.rs
services/dispatcher/src/middleware/: auth.rs  error.rs  header.rs  mod.rs  proxy.rs  router.rs
services/positions-api/: Cargo.toml
services/positions-api/src/: main.rs
services/positions-api/src/positions/: error.rs  post.rs
services/user-api/: Cargo.toml
