[package]
name = "circles-common"
version = "0.1.0"
authors = ["Mike Lubinets <lubinetsm@yandex.ru>"]

[dependencies]
diesel = { version = "^0.16", features = ["postgres", "chrono"] }
diesel_codegen = { version = "^0.16", default-features = false, features = ["postgres"] }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
r2d2 = "0.7.4"
r2d2-diesel = "0.16.0"
error-chain = "^0.10"
openssl = "^0.9"
futures = "^0.1"
futures-cpupool = "^0.1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "^0.6"
log = "0.3"

[dependencies.hyper]
git = "https://github.com/DevHeap/hyper"

[dependencies.reqwest]
git = "https://github.com/DevHeap/reqwest"

[dependencies.rusty_jwt]
git = "https://github.com/DevHeap/rusty_jwt"