[package]
name = "circles-router"
version = "0.1.0"
authors = ["Mike Lubinets <lubinetsm@yandex.ru>"]

[dependencies]
tokio-service = "^0.1"
futures = "^0.1"
error-chain = "^0.10"
log = "0.3"

[dependencies.hyper]
git = "https://github.com/DevHeap/hyper"

[dependencies.hyper-common]
path = "../hyper-common"

[dev-dependencies.service-fn]
git = "https://github.com/tokio-rs/service-fn"
