[package]
name = "dispatcher"
version = "0.1.0"
authors = ["Mike Lubinets <lubinetsm@yandex.ru>"]

[dependencies]
rdkafka = "^0.12"
tokio-core = "^0.1"
tokio-service = "^0.1"
futures-cpupool = "^0.1"
futures = "^0.1"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
error-chain = "^0.10"
lazy_static = "^0.2"
hyper = "^0.11"
reset-router = "^0.2"
chrono = "^0.4"
base64 = "^0.6"
openssl = "^0.9"
reqwest = "^0.7"

[dependencies.rusty_jwt]
path = "../../../rusty_jwt"
#rev = "deee07b"
