[package]
name = "dispatcher"
version = "0.1.0"
authors = ["Mike Lubinets <lubinetsm@yandex.ru>"]

[dependencies]
tokio-core = "^0.1"
futures = "^0.1"
error-chain = "^0.10"
chrono = "^0.4"
log = "0.3"
fern = "^0.4"

[dependencies.rusty_jwt]
git = "https://github.com/mersinvald/rusty_jwt"

[dependencies.service-fn]
git = "https://github.com/tokio-rs/service-fn"

[dependencies.circles-router]
path = "../../lib/circles-router/"

[dependencies.hyper-common]
path = "../../lib/hyper-common/"

[dependencies.circles-common]
path = "../../lib/circles-common/"